compiler/lume_parser/src/snapshots/lume_parser__tests__enum_snapshots@variant_param_single.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"\n        enum Foo {\n            Bar(Int32)\n        }\")"
---
SOURCE_FILE@0..52
  WHITESPACE@0..9 "\n        "
  ENUM@9..52
    ENUM_KW@9..13 "enum"
    WHITESPACE@13..14 " "
    NAME@14..17
      IDENT@14..17 "Foo"
    WHITESPACE@17..18 " "
    LEFT_BRACE@18..19 "{"
    WHITESPACE@19..32 "\n            "
    CASE@32..42
      NAME@32..35
        IDENT@32..35 "Bar"
      CASE_PARAM_LIST@35..42
        LEFT_PAREN@35..36 "("
        NAMED_TYPE@36..41
          PATH@36..41
            PATH_TYPE@36..41
              NAME@36..41
                IDENT@36..41 "Int32"
        RIGHT_PAREN@41..42 ")"
    WHITESPACE@42..51 "\n        "
    RIGHT_BRACE@51..52 "}"
