compiler/lume_parser/src/snapshots/lume_parser__tests__function_definition_snapshots@empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"fn main() {}\")"
---
SOURCE_FILE@0..12
  FN@0..12
    SIG@0..9
      FN_KW@0..2 "fn"
      WHITESPACE@2..3 " "
      NAME@3..7
        IDENT@3..7 "main"
      PARAM_LIST@7..9
        LEFT_PAREN@7..8 "("
        RIGHT_PAREN@8..9 ")"
    WHITESPACE@9..10 " "
    BLOCK@10..12
      LEFT_BRACE@10..11 "{"
      RIGHT_BRACE@11..12 "}"
