compiler/lume_parser/src/snapshots/lume_parser__tests__function_definition_snapshots@parameter.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"fn main(argc: UInt8) -> Void { }\")"
---
SOURCE_FILE@0..32
  FN@0..32
    SIG@0..29
      FN_KW@0..2 "fn"
      WHITESPACE@2..3 " "
      NAME@3..7
        IDENT@3..7 "main"
      PARAM_LIST@7..20
        LEFT_PAREN@7..8 "("
        PARAM@8..19
          NAME@8..12
            IDENT@8..12 "argc"
          COLON@12..13 ":"
          WHITESPACE@13..14 " "
          NAMED_TYPE@14..19
            PATH@14..19
              PATH_TYPE@14..19
                NAME@14..19
                  IDENT@14..19 "UInt8"
        RIGHT_PAREN@19..20 ")"
      WHITESPACE@20..21 " "
      RETURN_TYPE@21..29
        ARROW@21..23 "->"
        WHITESPACE@23..24 " "
        NAMED_TYPE@24..29
          PATH@24..29
            PATH_TYPE@24..29
              NAME@24..28
                IDENT@24..28 "Void"
              WHITESPACE@28..29 " "
    BLOCK@29..32
      LEFT_BRACE@29..30 "{"
      WHITESPACE@30..31 " "
      RIGHT_BRACE@31..32 "}"
