compiler/lume_parser/src/snapshots/lume_parser__tests__function_definition_snapshots@parameters.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"fn main(argc: UInt8, arcv: [String]) -> void { }\")"
---
SOURCE_FILE@0..48
  FN@0..48
    SIG@0..45
      FN_KW@0..2 "fn"
      WHITESPACE@2..3 " "
      NAME@3..7
        IDENT@3..7 "main"
      PARAM_LIST@7..36
        LEFT_PAREN@7..8 "("
        PARAM@8..19
          NAME@8..12
            IDENT@8..12 "argc"
          COLON@12..13 ":"
          WHITESPACE@13..14 " "
          NAMED_TYPE@14..19
            PATH@14..19
              PATH_TYPE@14..19
                NAME@14..19
                  IDENT@14..19 "UInt8"
        COMMA@19..20 ","
        WHITESPACE@20..21 " "
        PARAM@21..35
          NAME@21..25
            IDENT@21..25 "arcv"
          COLON@25..26 ":"
          WHITESPACE@26..27 " "
          ARRAY_TYPE@27..35
            LEFT_BRACKET@27..28 "["
            NAMED_TYPE@28..34
              PATH@28..34
                PATH_TYPE@28..34
                  NAME@28..34
                    IDENT@28..34 "String"
            RIGHT_BRACKET@34..35 "]"
        RIGHT_PAREN@35..36 ")"
      WHITESPACE@36..37 " "
      RETURN_TYPE@37..45
        ARROW@37..39 "->"
        WHITESPACE@39..40 " "
        NAMED_TYPE@40..45
          PATH@40..45
            PATH_TYPE@40..45
              NAME@40..44
                IDENT@40..44 "void"
              WHITESPACE@44..45 " "
    BLOCK@45..48
      LEFT_BRACE@45..46 "{"
      WHITESPACE@46..47 " "
      RIGHT_BRACE@47..48 "}"
